packages/wasm/ballerina-lang-go/parser/testdata/tokens/record/negative/open_record_uninit_access.token
(public 6 0x00 ())
(type 4 0x00 ())
(ident, "Person" 6 0x00 ())
(record 6 0x00 ())
({ 1 0x00 ())
(string 6 0x00 ())
(ident, "name" 4 0x00 ())
(= 1 0x00 ())
(string, """" 2 0x00 ())
(; 1 0x00 ())
(int 3 0x00 ())
(ident, "age" 3 0x00 ())
(= 1 0x00 ())
(int, "0" 1 0x00 ())
(; 1 0x00 ())
(} 1 0x00 ())
(; 1 0x00 ())
(function 8 0x00 ())
(ident, "uninitAccess" 12 0x00 ())
(( 1 0x00 ())
() 1 0x00 ())
({ 1 0x00 ())
(ident, "Person" 6 0x00 ())
(ident, "p" 1 0x00 ())
(; 1 0x00 ())
(string 6 0x00 ())
(ident, "name" 4 0x00 ())
(= 1 0x00 ())
(ident, "p" 1 0x00 ())
(. 1 0x00 ())
(ident, "name" 4 0x00 ())
(; 1 0x00 ())
(ident, "name" 4 0x00 ())
(= 1 0x00 ())
(string, """" 2 0x00 ())
(; 1 0x00 ())
(ident, "p" 1 0x00 ())
(. 1 0x00 ())
(ident, "age" 3 0x00 ())
(= 1 0x00 ())
(int, "25" 2 0x00 ())
(; 1 0x00 ())
(ident, "p" 1 0x00 ())
([ 1 0x00 ())
(string, ""age"" 5 0x00 ())
(] 1 0x00 ())
(= 1 0x00 ())
(int, "30" 2 0x00 ())
(; 1 0x00 ())
(ident, "Person" 6 0x00 ())
(ident, "_" 1 0x00 ())
(= 1 0x00 ())
(ident, "getUninitializedRecord11" 24 0x00 ())
(( 1 0x00 ())
(ident, "p" 1 0x00 ())
() 1 0x00 ())
(; 1 0x00 ())
(ident, "Person" 6 0x00 ())
(ident, "_" 1 0x00 ())
(= 1 0x00 ())
(ident, "getUninitializedRecord21" 24 0x00 ())
(( 1 0x00 ())
() 1 0x00 ())
(; 1 0x00 ())
(} 1 0x00 ())
(function 8 0x00 ())
(ident, "getUninitializedRecord11" 24 0x00 ())
(( 1 0x00 ())
(ident, "Person" 6 0x00 ())
(ident, "p" 1 0x00 ())
() 1 0x00 ())
(returns 7 0x00 ())
(ident, "Person" 6 0x00 ())
({ 1 0x00 ())
(ident, "Person" 6 0x00 ())
(ident, "p2" 2 0x00 ())
(= 1 0x00 ())
(ident, "getUninitializedRecord12" 24 0x00 ())
(( 1 0x00 ())
(ident, "p" 1 0x00 ())
() 1 0x00 ())
(; 1 0x00 ())
(return 6 0x00 ())
(ident, "p2" 2 0x00 ())
(; 1 0x00 ())
(} 1 0x00 ())
(function 8 0x00 ())
(ident, "getUninitializedRecord12" 24 0x00 ())
(( 1 0x00 ())
(ident, "Person" 6 0x00 ())
(ident, "p" 1 0x00 ())
() 1 0x00 ())
(returns 7 0x00 ())
(ident, "Person" 6 0x00 ())
({ 1 0x00 ())
(ident, "Person" 6 0x00 ())
(ident, "p2" 2 0x00 ())
(= 1 0x00 ())
(ident, "p" 1 0x00 ())
(; 1 0x00 ())
(return 6 0x00 ())
(ident, "p2" 2 0x00 ())
(; 1 0x00 ())
(} 1 0x00 ())
(function 8 0x00 ())
(ident, "getUninitializedRecord21" 24 0x00 ())
(( 1 0x00 ())
() 1 0x00 ())
(returns 7 0x00 ())
(ident, "Person" 6 0x00 ())
({ 1 0x00 ())
(ident, "Person" 6 0x00 ())
(ident, "p3" 2 0x00 ())
(= 1 0x00 ())
(ident, "getUninitializedRecord22" 24 0x00 ())
(( 1 0x00 ())
() 1 0x00 ())
(; 1 0x00 ())
(return 6 0x00 ())
(ident, "p3" 2 0x00 ())
(; 1 0x00 ())
(} 1 0x00 ())
(function 8 0x00 ())
(ident, "getUninitializedRecord22" 24 0x00 ())
(( 1 0x00 ())
() 1 0x00 ())
(returns 7 0x00 ())
(ident, "Person" 6 0x00 ())
({ 1 0x00 ())
(ident, "Person" 6 0x00 ())
(ident, "p4" 2 0x00 ())
(; 1 0x00 ())
(return 6 0x00 ())
(ident, "p4" 2 0x00 ())
(; 1 0x00 ())
(} 1 0x00 ())
(2 0 0x00 ())
